--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,16 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+
+   <h1>Team Name: <%=@teamname %></h1>
+   Coach: <%=@coach %>
+   Point Guard: <%=@pg %>
+   Shooting Guard: <%=@sg %>
+   Power Forward: <%=@pf %>
+   Shooting Guard: <%=@sg %>
+   Center: <%=@c %>
+
 
 
  </body>
 </html>
-
-
